Fix button icon spacing

--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -1,4 +1,4 @@
-$nav-height: 50px !default
+$nav-height: 3rem !default
 
 // Components
 
@@ -14,19 +14,19 @@ $nav-height: 50px !default
   flex-grow: 0
   flex-shrink: 0
   justify-content: center
-  padding: 10px
+  padding: 0.5rem 0.75rem
   a
     flex-grow: 1
     flex-shrink: 0
   img
-    max-height: 24px
+    max-height: 1.5rem
   .button + .button
-    margin-left: 10px
+    margin-left: 0.75rem
   .tag
     &:first-child
-      margin-right: 5px
+      margin-right: 0.25rem
     &:last-child
-      margin-left: 5px
+      margin-left: 0.25rem
   // Responsiveness
   +mobile
     justify-content: flex-start
@@ -66,11 +66,11 @@ a.nav-item
     position: absolute
     .nav-item
       border-top: 1px solid rgba($border, 0.5)
-      padding: 10px
+      padding: 0.75rem
     &.is-active
       display: block
   +tablet-only
-    padding-right: 20px
+    padding-right: 1.5rem
 
 .nav-left
   align-items: stretch
@@ -137,4 +137,4 @@ a.nav-item
     .container > &
       & > .nav-left
         & > .nav-item.is-brand:first-child
-          padding-left: 20px
+          padding-left: 1.5rem
