--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -1,5 +1,4 @@
 .icon
-  background: $background
   +fa(21px, 1.5rem)
   .fa
     font-size: inherit
